[gd_scene load_steps=19 format=2]

[ext_resource path="res://scr/actors/EnemyClass.tscn" type="PackedScene" id=1]
[ext_resource path="res://scr/enemy/Mob6.gd" type="Script" id=2]
[ext_resource path="res://assets/enemies/multieyemob.png" type="Texture" id=3]
[ext_resource path="res://assets/enemies/multieyemobnormal.png" type="Texture" id=4]
[ext_resource path="res://scr/items/CritDrop.tscn" type="PackedScene" id=5]
[ext_resource path="res://scr/items/StarGunDrop.tscn" type="PackedScene" id=6]
[ext_resource path="res://scr/items/DoubleShotDrop.tscn" type="PackedScene" id=7]
[ext_resource path="res://scr/items/MultiGunDrop.tscn" type="PackedScene" id=8]
[ext_resource path="res://scr/items/TripleShotDrop.tscn" type="PackedScene" id=9]
[ext_resource path="res://scr/items/ShieldDrop.tscn" type="PackedScene" id=10]
[ext_resource path="res://scr/items/SpeedDrop.tscn" type="PackedScene" id=11]
[ext_resource path="res://scr/items/SpinDrop.tscn" type="PackedScene" id=12]
[ext_resource path="res://scr/items/HealthDrop.tscn" type="PackedScene" id=13]
[ext_resource path="res://scr/bullets/EB3.tscn" type="PackedScene" id=14]
[ext_resource path="res://scr/bullets/EB0.tscn" type="PackedScene" id=15]
[ext_resource path="res://scr/bullets/EB2.tscn" type="PackedScene" id=16]
[ext_resource path="res://scr/bullets/BB1.tscn" type="PackedScene" id=17]

[sub_resource type="Animation" id=1]
resource_name = "default"
length = 0.6
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3, 4, 5, 6 ]
}

[node name="Mob6" instance=ExtResource( 1 )]
script = ExtResource( 2 )
mob_max_health = 5.0
can_shoot = true
bullets_array = [ ExtResource( 15 ), ExtResource( 16 ), ExtResource( 14 ), ExtResource( 17 ) ]
aim_spin = true
aim_spin_rate = 0.5
drop_array = [ ExtResource( 5 ), ExtResource( 7 ), ExtResource( 13 ), ExtResource( 8 ), ExtResource( 10 ), ExtResource( 11 ), ExtResource( 12 ), ExtResource( 6 ), ExtResource( 9 ) ]

[node name="Sprite" parent="." index="0"]
texture = ExtResource( 3 )
normal_map = ExtResource( 4 )
hframes = 3
vframes = 3

[node name="Position2D" parent="Sprite" index="1"]
position = Vector2( -2.10225, 27.7955 )

[node name="Position2D2" type="Position2D" parent="Sprite" index="2"]
position = Vector2( 28.17, -8.19874 )
rotation = -0.329867

[node name="Position2D3" type="Position2D" parent="Sprite" index="3"]
position = Vector2( -25.6474, -13.4543 )
rotation = -2.56214

[node name="Position2DRed" type="Position2D" parent="Sprite" index="4"]
position = Vector2( 5.04536, -23.9655 )
rotation = -1.15715

[node name="Position2DRed2" type="Position2D" parent="Sprite" index="5"]
position = Vector2( 22.2837, -5.67605 )
rotation = -0.0820305

[node name="Position2DRed3" type="Position2D" parent="Sprite" index="6"]
position = Vector2( -15.1361, 12.193 )
rotation = -3.96713

[node name="Position2DGreen" type="Position2D" parent="Sprite" index="7"]
position = Vector2( -10.5112, -26.0678 )
rotation = -1.90066

[node name="Position2DGreen2" type="Position2D" parent="Sprite" index="8"]
position = Vector2( 23.7553, 10.301 )
rotation = 0.579449

[node name="Position2DGreen3" type="Position2D" parent="Sprite" index="9"]
position = Vector2( -6.0965, -5.67605 )
rotation = 2.81173

[node name="Position2DBlue" type="Position2D" parent="Sprite" index="10"]
position = Vector2( -26.9087, 4.20448 )
rotation = -3.55349

[node name="Position2DBlue2" type="Position2D" parent="Sprite" index="11"]
position = Vector2( 8.8294, 9.03963 )
rotation = -5.20632

[node name="Position2DBlue3" type="Position2D" parent="Sprite" index="12"]
position = Vector2( 19.1304, -18.2895 )
rotation = -0.907571

[node name="aim" parent="Sprite" index="13"]
visible = false

[node name="CollisionShape2D" parent="." index="2"]
visible = false

[node name="VisibilityEnabler2D" parent="." index="3"]
visible = false

[node name="DelayTimer" type="Timer" parent="." index="10"]
wait_time = 0.1
one_shot = true

[node name="AnimationPlayer2" type="AnimationPlayer" parent="." index="11"]
anims/default = SubResource( 1 )
